Menu_MiniPanels 6.x-1.x-dev, xxxx-xx-xx
---------------------------------------
#1379542 by DamienMcKenna: Added note to README.txt about a known conflict
  with the DivX Player.
#1376860 by DamienMcKenna: Option to not output anything on admin pages.


Menu_MiniPanels 6.x-1.3-rc2, 2011-09-03
---------------------------------------
#1239292 by DamienMcKenna: Missed another line from rerolling the #1230622
  patch that caused the settings page to break.
#1116990 by kndr, DamienMcKenna: Added access to the qTips callbacks.
#1251804 by DamienMcKenna: Indicate what qTip JS file is being used.
#1238890 by DamienMcKenna: Leave a warning in hook_install() if the qTip JS
  library is not installed.
#1258150 by davidwhthomas, DamienMcKenna: Simplified usage of
  drupal_add_css(), we don't need to specify default arguments.
#1238882 by DamienMcKenna: Drush script to download the qTip script.


Menu_MiniPanels 6.x-1.3-rc1, 2011-08-04
---------------------------------------
#1230622 by DamienMcKenna: Missed a line when I originally rerolled this
  patch.
#943842 by DamienMcKenna: Allow the qTip file to be loaded from multiple paths,
  changing the default to "sites/all/libraries/qtip", but cache the path to
  offset the performance hit.
#943842 by DamienMcKenna: Now includes proper Libraries API support as the
  first location checked for the qTip JS file.
#1234654 by DamienMcKenna: Slight refactoring of menu_minipanels_form_alter()
  to match the D7 branch more closely. Also tidied up a few small things - 
  comments, output variables, etc.


Menu_MiniPanels 6.x-1.3-beta2, 2011-07-31
-----------------------------------------
#1230686 by davidwhthomas: Fatfingered the last patch.


Menu_MiniPanels 6.x-1.3-beta1, 2011-07-30
-----------------------------------------
#1199426 by DamienMcKenna: updated all comments to fit the Drupal coding
  standards.
#1221566 by DamienMcKenna: Added hook_menu_minipanels_defaults_alter() to
  allow the defaults to be customized.